--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -7,7 +7,34 @@
     </a>
 
     <!-- Show this for logged out users -->
-    <ul class="nav navbar-nav pull-xs-right">
+    <ul class="nav navbar-nav pull-xs-right" show-authed="false">
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.home">
+          Home
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.login">
+          Sign In
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link"
+          ui-sref-active="active"
+          ui-sref="app.register">
+          Sign up
+        </a>
+      </li>
+
+    </ul>
+    <ul class="nav navbar-nav pull-xs-right" show-authed="true">
 
       <li class="nav-item">
         <a class="nav-link"
@@ -29,12 +56,11 @@
         <a class="nav-link"
           ui-sref-active="active"
           ui-sref="app.profile">
-          Profile
+          My Profile
         </a>
       </li>
 
     </ul>
-
 
   </div>
 </nav>
