--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -1,34 +1,26 @@
 <nav class="navbar navbar-light">
   <div class="container">
 
-    <a class="navbar-brand"
-      ui-sref="app.home"
-      ng-bind="::$ctrl.appName | lowercase">
+    <a class="navbar-brand" ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase">
     </a>
 
     <!-- Show this for logged out users -->
     <ul class="nav navbar-nav pull-xs-right" show-authed="false">
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.home">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.home">
           Home
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.login">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.login">
           Sign In
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.register">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.register">
           Sign up
         </a>
       </li>
@@ -37,26 +29,26 @@
     <ul class="nav navbar-nav pull-xs-right" show-authed="true">
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.home">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.home">
           Home
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.article">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.article">
           Article
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link"
-          ui-sref-active="active"
-          ui-sref="app.profile">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.profile">
           My Profile
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.settings">
+          <i class="ion-gear-a"></i>&nbsp;Settings
         </a>
       </li>
 
